@@ -1,4 +1,5 @@
 Since php-library v1.1.0
 
+File: read_file_contents method created
 Format: array_to_string method created
 Geo_Plugin: collect method base sub-array location parameter prefixed with https/http query and added as a special parameter in base sub-array
